--- a/top_academy/main/templates/main/base.html
+++ b/top_academy/main/templates/main/base.html
@@ -18,7 +18,7 @@
     <link rel="manifest" href="{% static 'deps/favicon/site.webmanifest' %}">
 
 {% block title %}
-{% endblock
+{% endblock %}
 
 </head>
 
