--- a/top_academy/templates/base.html
+++ b/top_academy/templates/base.html
@@ -26,7 +26,7 @@
 <header>
     <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Home</a>
+            <a class="navbar-brand" href="{% url 'main:index' %}">Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -42,7 +42,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item  text-white" href="#">Доставка и оплата</a></li>
                             <li><a class="dropdown-item  text-white" href="#">Контактная информация</a></li>
-                            <li><a class="dropdown-item  text-white" href="#">Про нас</a></li>
+                            <li><a class="dropdown-item  text-white" href="{% url 'main:about' %}">Про нас</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -90,7 +90,7 @@
                          height="16">
                 </button>
                 <ul class="dropdown-menu bg-dark" data-bs-theme="dark">
-                    <li><a class="dropdown-item text-white" href="goods/catalog.html">Все товары</a></li>
+                    <li><a class="dropdown-item text-white" href="{% url 'goods:catalog' %}">Все товары</a></li>
                     <li><a class="dropdown-item text-white" href="goods/catalog.html">Кухня</a></li>
                     <li><a class="dropdown-item text-white" href="goods/catalog.html">Спальня</a></li>
                     <li><a class="dropdown-item text-white" href="goods/catalog.html">Гостинная</a></li>
@@ -182,7 +182,18 @@
 </section>
 
 {% block content %}
-
+<!-- Контент -->
+<div class="container">
+    <div class="row mt-1">
+        <div class="col-lg-2">
+            <!-- Пустой блок на Ваше усмотрение -->
+        </div>
+        <div class="col-lg-10">
+            <!-- Контент на странице -->
+            <h1 class="mt-5 pt-5"><strong>Магазин мебели HOME</strong></h1>
+        </div>
+    </div>
+</div
 {% endblock %}
 
 <footer class="py-4 bg-dark">
